# lec_uos-26-1_qc

./: .gitignore  README.md  pyproject.toml
notebooks/week02/: 00_single-qubit-simulation.ipynb
notebooks/week03/: 00_multi-qubit.ipynb
notebooks/week04/: 00_teleporation.ipynb  01_superdense-coding.ipynb
notebooks/week05/: 00_bb84-noiseless.ipynb
notebooks/week06/: 00_deutsch.ipynb  01_deutsch-jozsa.ipynb  02_noisy-deutsch.ipynb
notebooks/week08/: 00_grover_toy.ipynb
